--- a/.github/workflows/driveSync.yml
+++ b/.github/workflows/driveSync.yml
@@ -1,5 +1,5 @@
-name: GitHub Actions Demo
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
+name: Google Drive Sync
+run-name: ${{ github.actor }} is syncing files from 🚀
 on: [push]
 jobs:
   Explore-GitHub-Actions:
