--- a/.github/workflows/driveSync.yml
+++ b/.github/workflows/driveSync.yml
@@ -1,5 +1,5 @@
 name: Google Drive Sync
-run-name: ${{ github.actor }} is syncing files from 🚀
+run-name: ${{ github.actor }} is syncing files from Google Drive
 on: [push]
 jobs:
   Explore-GitHub-Actions:
