--- a/.github/workflows/driveSync.yml
+++ b/.github/workflows/driveSync.yml
@@ -17,5 +17,6 @@ jobs:
         with:
           # ID of the Google Drive folder to be exported.
           google_drive_folder_id: 1Enofzz7jlcF5vVqLMAf8bVtVCZ9SYBpQ
-
-
+          github_directory: docs
+    permissions:
+      contents: write
