--- a/.github/workflows/driveSync.yml
+++ b/.github/workflows/driveSync.yml
@@ -3,10 +3,9 @@ run-name: ${{ github.actor }} is syncing files from Google Drive
 on:
   workflow_dispatch:
 jobs:
-  Explore-GitHub-Actions:
+  Google-Drive-Sync-Job:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - uses: 'google-github-actions/auth@v2'
         with:
           credentials_json: '${{ secrets.GOOGLE_CREDENTIALS }}' # Replace with the name of your GitHub Actions secret
